# noise-cirkuit

./: .gitignore  AUTHORS  CHANGELOG.md  Makefile.am  README  README.md  configure.ac
.github/workflows/: makefile.yml
examples/: README.md  example.cpp
man/: Makefile.am  noisecirkuit.1
src/: CircuitBreaker.cpp  CircuitBreaker.h  CircuitBreakerClosedState.cpp  CircuitBreakerClosedState.h  CircuitBreakerHalfOpenState.cpp  CircuitBreakerHalfOpenState.h  CircuitBreakerHealthPolicy.cpp  CircuitBreakerHealthPolicy.h  CircuitBreakerOpenState.cpp  CircuitBreakerOpenState.h  CircuitBreakerState.cpp  CircuitBreakerState.h  CircuitBreakerStatus.h  CircuitBreaker_t.h  Makefile.am  MockHealthPolicy.cpp  MockHealthPolicy.h  TimeService.cpp  TimeService.h  main.cpp
tests/: CircuitBreakerClosedStateTest.cpp  CircuitBreakerClosedStateTest.h  CircuitBreakerHalfOpenStateTest.cpp  CircuitBreakerHalfOpenStateTest.h  CircuitBreakerOpenStateTest.cpp  CircuitBreakerOpenStateTest.h  CircuitBreakerTest.cpp  CircuitBreakerTest.h  MainTestSuite.cpp  Makefile.am  main.cpp  tester.sh
